# Lab3---Paralela

./: CMakeLists.txt  README.md  mpi_vector_add  mpi_vector_add_num_aleatorios.c  mpi_vector_operations  mpi_vector_operations.c  vector_add  vector_add_num_aleatorios.c
